dataset1235/2025-2/2868285114/users/1760111885/executions/3071719669_1420232579.log
== SUBMISSION (2025-08-28 22:08:30)
-- CODE: 
pesos= int(input())

valorR = pesos *0.28
print(round(valorR,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
2.3
---- user output:
1.4
-- TEST CASE 2:
---- input:
12
---- correct output:
5.52
---- user output:
3.36
-- TEST CASE 3:
---- input:
1
---- correct output:
0.46
---- user output:
0.28
-- TEST CASE 4:
---- input:
7
---- correct output:
3.22
---- user output:
1.96
-- TEST CASE 5:
---- input:
21
---- correct output:
9.66
---- user output:
5.88
-- TEST CASE 6:
---- input:
10
---- correct output:
4.6
---- user output:
2.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:07:36)
-- CODE: 
pesos= int(input())

valorR = pesos *0.28
print(round(valorR,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
2.3
---- user output:
1.4
-- TEST CASE 2:
---- input:
12
---- correct output:
5.52
---- user output:
3.36
-- TEST CASE 3:
---- input:
1
---- correct output:
0.46
---- user output:
0.28
-- TEST CASE 4:
---- input:
7
---- correct output:
3.22
---- user output:
1.96
-- TEST CASE 5:
---- input:
21
---- correct output:
9.66
---- user output:
5.88
-- TEST CASE 6:
---- input:
10
---- correct output:
4.6
---- user output:
2.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:08:41)
-- CODE: 
pesos = int(input())

valorR = pesos *0.28
print(round(valorR,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
2.3
---- user output:
1.4
-- TEST CASE 2:
---- input:
12
---- correct output:
5.52
---- user output:
3.36
-- TEST CASE 3:
---- input:
1
---- correct output:
0.46
---- user output:
0.28
-- TEST CASE 4:
---- input:
7
---- correct output:
3.22
---- user output:
1.96
-- TEST CASE 5:
---- input:
21
---- correct output:
9.66
---- user output:
5.88
-- TEST CASE 6:
---- input:
10
---- correct output:
4.6
---- user output:
2.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:09:06)
-- CODE: 
pesos = int(input())

valorR = pesos *0.46
print(round(valorR,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
2.3
---- user output:
2.3
-- TEST CASE 2:
---- input:
12
---- correct output:
5.52
---- user output:
5.52
-- TEST CASE 3:
---- input:
1
---- correct output:
0.46
---- user output:
0.46
-- TEST CASE 4:
---- input:
7
---- correct output:
3.22
---- user output:
3.22
-- TEST CASE 5:
---- input:
21
---- correct output:
9.66
---- user output:
9.66
-- TEST CASE 6:
---- input:
10
---- correct output:
4.6
---- user output:
4.6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:08:40)
-- CODE: 
pesos = int(input())

valorR = pesos *0.28
print(round(valorR,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
2.3
---- user output:
1.4
-- TEST CASE 2:
---- input:
12
---- correct output:
5.52
---- user output:
3.36
-- TEST CASE 3:
---- input:
1
---- correct output:
0.46
---- user output:
0.28
-- TEST CASE 4:
---- input:
7
---- correct output:
3.22
---- user output:
1.96
-- TEST CASE 5:
---- input:
21
---- correct output:
9.66
---- user output:
5.88
-- TEST CASE 6:
---- input:
10
---- correct output:
4.6
---- user output:
2.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:07:21)
-- CODE: 
pesos= int(inpu())

valorR = pesos *0.28
print(round(valorR,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
2.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pesos= int(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
12
---- correct output:
5.52
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pesos= int(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
1
---- correct output:
0.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pesos= int(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
7
---- correct output:
3.22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pesos= int(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
21
---- correct output:
9.66
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pesos= int(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
10
---- correct output:
4.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pesos= int(inpu())
               ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:08:39)
-- CODE: 
pesos = int(input())

valorR = pesos *0.28
print(round(valorR,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
2.3
---- user output:
1.4
-- TEST CASE 2:
---- input:
12
---- correct output:
5.52
---- user output:
3.36
-- TEST CASE 3:
---- input:
1
---- correct output:
0.46
---- user output:
0.28
-- TEST CASE 4:
---- input:
7
---- correct output:
3.22
---- user output:
1.96
-- TEST CASE 5:
---- input:
21
---- correct output:
9.66
---- user output:
5.88
-- TEST CASE 6:
---- input:
10
---- correct output:
4.6
---- user output:
2.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
